fixed loading screen tip not being aligned

--- a/global/globalStyle.css
+++ b/global/globalStyle.css
@@ -14,6 +14,16 @@ html {
   color: #ffffff;
   background-color: #323232;
   overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+}
+body {
+  height: 100vh;
+  background-color: #323232;
+  color: #ffffff;
+  overflow: hidden;
+  margin: 0%;
+  width: 100vw;
 }
 canvas {
   position: absolute;
