--- a/style.css
+++ b/style.css
@@ -1,18 +1,3 @@
-html {
-  overflow: hidden;
-  width: 100vw;
-  height: 100vh;
-}
-
-body {
-  height: 100vh;
-  background-color: #323232;
-  color: #ffffff;
-  overflow: hidden;
-  margin: 0%;
-  width: 100vw;
-  height: 100vh;
-}
 .synthSun {
   width: calc(40px * var(--pxDensity));
   height: auto;
